# pyobs-allsky-cloudcover

./: .gitignore  Cargo.toml  Readme.md  application.yaml  day_integration_test.yaml  example.yaml  integration_test.yaml  night_integration_test.yaml  plotting.py  pyproject.toml
.github/workflows/: build.yml  pytest.yaml  tests.yaml
data/: catalog_v50.csv  test_day_image.fits  test_night_image.fits  test_wcs.fits
pyobs_cloudcover/: application.py  application_factory.py  cloud_coverage_info.py
pyobs_cloudcover/cloud_info_calculator/: __init__.py  cloud_info_calculator_factory.py  cloud_info_calculator_options.py  coverage_info_calculator.py
pyobs_cloudcover/measurement_log/: influx.py  measurement.py  measurement_log.py  measurment_logger.py  measurment_logger_factory.py
pyobs_cloudcover/pipeline/: intervall.py  pipeline.py  pipeline_controller.py  pipeline_controller_factory.py
pyobs_cloudcover/testing/: __init__.py  module.py
pyobs_cloudcover/web_api/: coverage_query_executor.py  server.py  server_factory.py
pyobs_cloudcover/world_model/: __init__.py  hour_angle_converter.py  simple_model.py  wcs_model.py  wcs_model_loader.py  world_model.py  world_model_factory.py
scripts/: day_pipeline.py  integrated_plotting.py  pipeline.py  plotting.py
scripts/data_loader/: date_indexed.py  image_iterator.py  sun_alt_date_filter.py
src/: alt_az_coord.rs  average.rs  cloud_map_generator.rs  entry.rs  lib.rs  main.rs  neighbour_list.rs  sky_query.rs  star.rs  star_counter.rs  weighted_value.rs
src/day/: mod.rs  sky_query.rs
src/night/: alt_az_coord.rs  mod.rs  (+4 more)
(+101 files in other folders)
