[tool.poetry]
name = "pyobs-allsky-cloudcover"
version = "1.2.1"
description = "Allsky Cloudcover Analyser"
authors = ["germanhydrogen <admin@germanhydrogen.org>"]
readme = "Readme.md"
packages = [{include = "pyobs_cloudcover"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
pytest-aiohttp = "^1.0.5"
mypy = "1.9.0"

[tool.mypy]
ignore_missing_imports = true
strict = true
disallow_subclassing_any = false

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyobs-allsky-cloudcover"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
    "pyobs-core[full]>=1.13.4",
    "influxdb-client>=1.42.0",
    "opencv-python>= 4.8.0.76"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "pytest-aiohttp>=1.0.5",
    "mypy>=1.9.0",
    "testcontainers[influxdb]>=4.7.1",
    "matplotlib"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["pyobs_cloudcover"]